Use proportional line height for menu items to prevent clipping.
BUG=305913

Review URL: https://codereview.chromium.org/75963006

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@236421 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 49486483be3520758bb8efb89d4670a4e2628988

--- a/chrome/browser/resources/uber/uber_frame.css
+++ b/chrome/browser/resources/uber/uber_frame.css
@@ -51,7 +51,7 @@ button {
   color: #999;
   cursor: pointer;
   font: inherit;
-  line-height: 17px;
+  line-height: 1.417em;  /* 17px based on default 12px font size. */
   margin: 6px 0;
   padding: 0;
 }
